Distill: align partitions and distill trace files

--- a/data/poly/poly.conf
+++ b/data/poly/poly.conf
@@ -7,13 +7,13 @@ dumpfreq    100               # Sample every 100 states.
 
 [init]
 alpha       5.
-rhomu       0.5
-rholam      0.5
-zetaL       10.
+murho       0.5
+lamrho      0.5
+lamzeta     10.
 
 [move]
 alpha       yes
-rhomu       yes
-rholam      yes
-zetalam     yes
+murho       yes
+lamrho      yes
+lamzeta     yes
 smiter      10
